[gd_scene load_steps=3 format=3 uid="uid://cu7kxrvdeaql1"]

[ext_resource type="PackedScene" uid="uid://2cftnam31qlk" path="res://src/UI/Components/input.tscn" id="1_gl2os"]
[ext_resource type="Script" path="res://src/UI/MenuBar/Fonts/Scripts/fonts_panel.gd" id="1_ongb3"]

[node name="FontsPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"PanelX"
script = ExtResource("1_ongb3")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="FontNameLineEdit" type="LineEdit" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Font name"

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="OnlySelectedCheckBox" type="CheckBox" parent="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Only Selected"

[node name="ShowFontsCheckBox" type="CheckBox" parent="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Show Fonts"

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ExampleLineEdit" type="LineEdit" parent="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Example"
placeholder_text = "Example"

[node name="FontSizeInput" parent="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("1_gl2os")]
layout_mode = 2
type = 2
suffix_label = "Px"
reset = false

[node name="PanelContainer" type="PanelContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"PanelX"

[node name="ScrollContainer" type="ScrollContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="GridContainer" type="GridContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="PagesHBoxContainer" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BackButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/PagesHBoxContainer"]
layout_mode = 2
text = "<"

[node name="PageLineEdit" type="LineEdit" parent="ScrollContainer/MarginContainer/VBoxContainer/PagesHBoxContainer"]
layout_mode = 2

[node name="MaxPageLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/PagesHBoxContainer"]
layout_mode = 2
text = "/0"

[node name="FowardButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/PagesHBoxContainer"]
layout_mode = 2
text = ">"

[connection signal="text_changed" from="ScrollContainer/MarginContainer/VBoxContainer/FontNameLineEdit" to="." method="_on_font_name_line_edit_text_changed"]
[connection signal="toggled" from="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OnlySelectedCheckBox" to="." method="_on_only_selected_check_box_toggled"]
[connection signal="toggled" from="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/ShowFontsCheckBox" to="." method="_on_show_fonts_check_box_toggled"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/PagesHBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="text_submitted" from="ScrollContainer/MarginContainer/VBoxContainer/PagesHBoxContainer/PageLineEdit" to="." method="_on_page_line_edit_text_submitted"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/PagesHBoxContainer/FowardButton" to="." method="_on_foward_button_pressed"]
